--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,2 +1,13 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
+
+EXPOSE 8080
+
+LABEL io.openshift.expose-services="8080:http"
+LABEL io.k8s.description="A basic Aphache HTTP Server child image, use ONBUILD" \
+ io.k8s.display-name="Aphache HTTP Server" \
+ io.k8s.expose-services="8080"http" \
+ io.openshift.tags="aphache, httpd"
+
+
+
